-------------------------
(2010-01-29) version 1.0:

  * First public release.
