@@ -28,9 +28,11 @@ let write ?(class_prefix = "hl_") ?(extra_classes = []) ?(dummy_lines = true) ?(
 	let make_class ?(extra_classes = []) names = a_class (extra_classes @ (List.map (fun x -> class_prefix ^ x) names)) in
 	let normal_line content = [pcdata "\n"; XHTML.M.code ~a:[make_class ["line"]] content] in
 	let dummy = if dummy_lines then [pcdata "\n"; XHTML.M.code ~a:[make_class ["line"; "dummy"]] []] else [] in
+	let class_of_special special =
+		Sexplib.Sexp.to_string_mach (Camlhighlight_core.sexp_of_special_style_t special) in
 	let elem_to_xhtml = function
-		| ("normal", str) -> XHTML.M.pcdata str
-		| (special, str)  -> XHTML.M.span ~a:[make_class [special]] [XHTML.M.pcdata str] in
+		| (#normal_style_t, str)	     -> XHTML.M.pcdata str
+		| (#special_style_t as special, str) -> XHTML.M.span ~a:[make_class [class_of_special special]] [XHTML.M.pcdata str] in
 	let convert_nums () =
 		let code_len = List.length code in
 		let width = String.length (string_of_int code_len) in
